[package]
name = "oxideav-ass"
version = "0.0.3"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/OxideAV/oxideav-ass"
authors = ["Mark Karpeles"]
description = "ASS/SSA subtitle codec + container for oxideav"

readme = "README.md"
homepage = "https://github.com/OxideAV/oxideav-ass"
keywords = ["multimedia", "subtitle", "ass", "ssa", "pure-rust"]
categories = ["multimedia", "parser-implementations"]

[dependencies]
oxideav-core = "0.1"
oxideav-codec = "0.1"
oxideav-container = "0.1"
oxideav-subtitle = "0.0"

[dev-dependencies]
oxideav-codec = "0.1"
oxideav-container = "0.1"
oxideav-core = "0.1"
oxideav-subtitle = "0.0"
